edited both html files

--- a/secondIndex.html
+++ b/secondIndex.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Second html</title>
+    <title>Second HTML</title>
 </head>
 <body>
+    <h3>Lorem, ipsum.</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium culpa nihil officia facere minima laudantium aspernatur dolore illum soluta, minus a aliquam, nobis, nostrum ut veritatis? Iusto ipsam necessitatibus dolor.</p>
 </body>
 </html>
